Corrects alignment and margins for Textbox

--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,8 @@
 	bottom: 0px;
 	right: 0px;
 	left: 0px;
-	margin: 8px 8px 20px 8px;
-	max-height: 154px;
+	margin: 0px 16px 16px 16px;
+	max-height: 180px;
 	display: inline-block;
 }
 
